added prelim auth

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,5 @@
-<p>
-  login works!
-</p>
+<div class="container">
+  <button 
+  (click)="login()"
+  class="btn btn-primary">Login with Google</button>
+</div>
