--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -8,16 +8,21 @@
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/products">Products</a>
+        <a class="nav-link" routerLink="/shopping-cart">Shopping Cart</a>
       </li>
-      <li ngbDropdown class="nav-item dropdown">
+      <ng-template #anonymousUser>
+          <li class="nav-item active">
+              <a class="nav-link" routerLink="/login">Login</a>
+            </li>      
+      </ng-template>
+      <li ngbDropdown class="nav-item dropdown" *ngIf="authService.$loginUser | async as loginUser; else anonymousUser">
         <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
-          aria-expanded="false">{{ 'your name'}}</a>
+          aria-expanded="false">{{ loginUser.displayName }}</a>
         <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
           <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
           <a class="dropdown-item" routerLink="/admin/products">Manage Products</a>
           <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
-          <a class="dropdown-item" >Logout</a>
+          <a class="dropdown-item logout" (click)="logout()">Logout</a>
         </div>
       </li>
     </ul>
