--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -15,13 +15,15 @@
               <a class="nav-link" routerLink="/login">Login</a>
             </li>      
       </ng-template>
-      <li ngbDropdown class="nav-item dropdown" *ngIf="authService.$loginUser | async as loginUser; else anonymousUser">
+      <li ngbDropdown class="nav-item dropdown" *ngIf="appUser; else anonymousUser">
         <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
-          aria-expanded="false">{{ loginUser.displayName }}</a>
+          aria-expanded="false">{{ appUser.name }}</a>
         <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
           <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
-          <a class="dropdown-item" routerLink="/admin/products">Manage Products</a>
-          <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
+          <ng-container *ngIf="appUser.isAdmin">
+              <a class="dropdown-item" routerLink="/admin/products">Manage Products</a>
+              <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
+          </ng-container>          
           <a class="dropdown-item logout" (click)="logout()">Logout</a>
         </div>
       </li>
