--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -1,5 +1,52 @@
-<a routerLink="/admin/products/new" class="btn btn-primary">New Product</a>
-<table class="table">
+<p>
+  <a routerLink="/admin/products/new" class="btn btn-primary">New Product</a>
+</p>
+<p>
+  <input #query (keyup)="filter(query.value)" type="text" class="form-control" placeholder="Search...">
+</p>
+
+<data-table
+  [items]="items"
+  [itemCount]="itemCount"
+  (reload)="reloadItems($event)"
+>
+  <data-table-column
+    [property]="'title'"
+    [header]="'Title'"
+    [sortable]="true"
+    [resizable]="true"
+  >
+  </data-table-column>
+
+  <data-table-column
+      [property]="'price'"
+      [header]="'Price'"
+      [sortable]="true"
+      [resizable]="true"
+  >
+    <ng-template #dataTableCell let-item="item">
+      {{ item.price | currency:'USD':true}}
+    </ng-template>
+  </data-table-column>
+
+  <data-table-column
+    [property]="'category'"
+    [header]="'Category'"
+    [sortable]="true"
+    [resizable]="true"
+  >
+  </data-table-column>
+
+  <data-table-column
+      [property]="'key'"
+  >
+    <ng-template #dataTableCell let-item="item">
+        <a [routerLink]="['/admin/products/', item.key]">Edit</a>
+    </ng-template>
+  </data-table-column>
+</data-table>
+
+<!-- <table class="table table-striped table-bordered">
     <thead>
       <tr>
         <th scope="col">#</th>
@@ -10,12 +57,12 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let p of productList$ | async; let indx = index">
-        <th scope="row">{{ p.key }}</th>
-        <td>{{ p.payload.val().title }}</td>
-        <td>{{ p.payload.val().price | currency:'INR':true }}</td>
-        <td>{{ p.payload.val().category }}</td>
+      <tr *ngFor="let p of filteredList; let indx = index">
+        <th scope="row">{{ (indx+1) }}</th>
+        <td>{{ p.title }}</td>
+        <td>{{ p.price | currency:'INR':true }}</td>
+        <td>{{ p.category }}</td>
         <td><a [routerLink]="['/admin/products/', p.key]">Edit</a></td>
       </tr>
     </tbody>
-  </table>
+  </table> -->
