home page update

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,3 +1,42 @@
-<p>
-  products works!
-</p>
+<div class="row">
+  <div class="col-3">
+      <ul class="list-group">
+          <a
+          routerLink="/"
+          [ngClass]="{'active':!selectedCategory}"
+          class="list-group-item"
+          (click)="filter()"
+          >
+          All Categories <span *ngIf="!selectedCategory">({{ (items===undefined? 0 : items.length) }})</span>
+          </a>
+          <a
+          *ngFor="let c of categoryList"
+          routerLink="/" 
+          [queryParams]="{category:c.key}"
+          class="list-group-item"
+          (click)="filter(c)"
+          [ngClass]="{'active':(selectedCategory === c.key)}"
+          >
+          {{ c.name }} <span *ngIf="selectedCategory === c.key">({{ (items===undefined? 0 : items.length) }})</span>
+          </a>
+        </ul>        
+  </div>
+  <div class="col-9">
+      <div class="row">
+          <ng-container *ngFor="let p of items; let i = index">
+              <div class="col">
+                  <div class="card" style="width: 18rem;">
+                      <img class="card-img-top" [src]="p.imageUrl" alt="Card image cap"
+                    >
+                      <div class="card-body">
+                        <h5 class="card-title">{{p.title}}</h5>
+                        <p class="card-text">{{p.price}}</p>
+                        <a href="#" class="btn btn-primary">Add to Cart</a>
+                      </div>
+                    </div>
+              </div>
+              <div *ngIf="(i+1)%2 === 0" class="w-100"></div>
+          </ng-container>  
+        </div>
+  </div>
+</div>
