--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -5,6 +5,6 @@
     <p class="card-text">{{product.price}}</p>
   </div>
   <div class="card-footer">
-      <a href="#" class="btn btn-primary btn-block">Add to Cart</a>
+      <button (click)="addToCart(product)" class="btn btn-primary btn-block">Add to Cart</button>
   </div>
 </div>
