--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -5,6 +5,17 @@
     <p class="card-text">{{product.price}}</p>
   </div>
   <div class="card-footer">
-      <button (click)="addToCart(product)" class="btn btn-primary btn-block">Add to Cart</button>
+    <button 
+      (click)="addToCart(product)" 
+      class="btn btn-secondary btn-block"
+      *ngIf="getQuantity() <= 0"
+    >
+      Add to Cart  {{ getQuantity() }}
+    </button>
+    <div class="btn btn-block" role="group" aria-label="Basic example" *ngIf="getQuantity() > 0">
+        <button type="button" class="btn btn-secondary" (click)="subFromCart(product)">-</button>
+        <button type="button" class="btn">{{ getQuantity() }} in cart</button>
+        <button type="button" class="btn btn-secondary" (click)="addToCart(product)">+</button>
+      </div>
   </div>
 </div>
