--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <ng-container *ngFor="let p of items; let i = index">
         <div class="col">
-          <product-card [product]="p"></product-card>
+          <product-card [shopping-cart]="shoppingCart" [product]="p"></product-card>
         </div>
         <div *ngIf="(i+1)%2 === 0" class="w-100"></div>
       </ng-container>
