--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -29,4 +29,8 @@
       </tr>       
     </tfoot>
   </table>
+  <button
+  (click)="clearCart()"
+   class="btn btn-danger sm">Clear Shopping Cart
+  </button>
 </ng-container>
