--- a/src/app/check-out/check-out.component.html
+++ b/src/app/check-out/check-out.component.html
@@ -1,3 +1,8 @@
-<p>
-  check-out works!
-</p>
+<div class="row">
+  <div class="col">
+    <shopping-cart-form [shoppingCartModel]="shoppingCartInstance"></shopping-cart-form>
+  </div>
+  <div class="col border border-dark">
+    <shopping-cart-summary [shoppingCartModel]="shoppingCartInstance"></shopping-cart-summary>
+  </div>
+</div>
