--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -25,7 +25,7 @@
       [resizable]="true"
   >
     <ng-template #dataTableCell let-item="item">
-      {{ item.price | currency:'USD':true}}
+      {{ item.price | currency:'USD':'symbol'}}
     </ng-template>
   </data-table-column>
 
@@ -45,24 +45,3 @@
     </ng-template>
   </data-table-column>
 </data-table>
-
-<!-- <table class="table table-striped table-bordered">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Name</th>
-        <th scope="col">Price</th>
-        <th scope="col">Category</th>
-        <th scope="col"></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let p of filteredList; let indx = index">
-        <th scope="row">{{ (indx+1) }}</th>
-        <td>{{ p.title }}</td>
-        <td>{{ p.price | currency:'INR':true }}</td>
-        <td>{{ p.category }}</td>
-        <td><a [routerLink]="['/admin/products/', p.key]">Edit</a></td>
-      </tr>
-    </tbody>
-  </table> -->
