--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,13 @@
 body {
     padding-top: 100px;
 }
+
+.thumbnail {
+    width: 80px;
+    height: 80px;
+    border-radius: 100%;
+    border-style: solid;
+    border-bottom-width: 0.2px;
+    border-color: cornflowerblue;
+    background-size: inherit;
+}
