--- a/src/app/core/components/bs-navbar/bs-navbar.component.html
+++ b/src/app/core/components/bs-navbar/bs-navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
-  <a class="navbar-brand"routerLink="/">OSHOP</a>
+  <a class="navbar-brand"routerLink="/">OSHOP<i class="fa fa-pagelines"></i></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -9,7 +9,7 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" routerLink="/shopping-cart">
-          Shopping Cart
+          <i class="fa fa-shopping-cart"></i>
           <span class="badge badge-warning badge-pill">{{ shoppingCartInstance.totalItemCount }}</span>
         </a>
       </li>
