--- a/src/app/core/components/bs-navbar/bs-navbar.component.html
+++ b/src/app/core/components/bs-navbar/bs-navbar.component.html
@@ -4,7 +4,6 @@
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
@@ -32,4 +31,5 @@
       </li>
     </ul>
   </div>
+  <app-clock class="float-right"></app-clock>
 </nav>
